<resources>
    <string name="app_name">壹课堂</string>

    <!--主页-->
    <string name="more">更多</string>


    <!-- Strings related to login -->
    <string name="prompt_email">请输入您的手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="phone_is_null">手机号不能为空</string>
    <string name="phone_is_error">请输入正确的手机号码</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="login_fail_1">用户名或密码错误</string>
    <string name="fo">密码不能为空</string>
    <string name="user_register">新用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_next">下一步</string>
    <string name="register_binding">立即绑定</string>
    <string name="register_code">获取验证码</string>
    <string name="register_code_write">请输入验证码</string>
    <string name="register_code_error">请输入正确验证码</string>
    <string name="register_code_success">验证码已发送，请注意查收</string>
    <string name="register_code_desc1">验证码已发送到您的手机%1$s</string>
    <string name="register_code_desc2">我们给您发送了一条短信，请将短信中的验证码填写在下面</string>
    <string name="register_code_timer">重新发送%1$dS</string>
    <string name="register_code_no_get">没有收到验证码？点我登录官网注册吧^_^</string>
    <string name="forget_finish">完 成</string>
    <string name="forget_password_current">当前密码</string>
    <string name="forget_password_edit">请输入新密码（密码至少6位）</string>
    <string name="forget_password_confirm">请重新输入新密码（密码至少6位）</string>
    <string name="forget_title">重新设置密码</string>
    <string name="forget_code">请输入手机验证码</string>
    <string name="forget_success">设置密码成功</string>
    <string name="forget_fail">设置密码失败</string>
    <string name="string_fail">请不要输入非法字符！</string>
    <string name="use_reset_password">请使用忘记密码功能找回您的密码~</string>
    <string name="register_password">密码请输入6至24位数字或字母</string>
    <string name="register_password_confirm">请再次输入密码</string>
    <string name="password_diff_error">两次密码不一致</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
